[package]
name = "WifiMonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus_push = {version = "0.4.5",features = ["prometheus_crate", "with_reqwest"] }
prometheus = "0.13"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1"
tempfile = "3"
url = "2"
prometheus-client = "0.24.0"
actix-web = "4.12.1"
time = "0.3.46"
log = "0.4.29"
env_logger = "0.11.8"

[[bin]]
name="server"
path="src/server.rs"