[package]
name = "WifiMonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false}
anyhow = "1"
tempfile = "3"
prometheus-client = "0.24.0"
actix-web = "4.12.1"
log = "0.4.29"
env_logger = "0.11.8"

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="raspberry_pi"
path="src/raspberry_pi.rs"